# auto-restart-wifi

./: .env.example  Cargo.toml  README.md  install.sh
.github/workflows/: checks.yml  release.yml
src/: config.rs  main.rs  network.rs  usb.rs
